Rework shared package

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,7 +13,9 @@
     "typeRoots": [
       "../"
     ],
-    "types": [],
+    "types": [
+      "@altv/types-shared"
+    ],
     "noEmit": true,
     "forceConsistentCasingInFileNames": true
   },
