--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/altmp/altv/issues"
   },
   "homepage": "https://github.com/altmp/altv-types#readme",
-  "dependencies": {
-    "@altv/types-shared": "1.0.0"
+  "peerDependencies": {
+    "@altv/types-shared": "^1.0.0"
   }
 }
